<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:title="Home"
            android:icon="@drawable/outline_home_24"
            app:itemTextColor="@color/menu_item_text_color_selector"
            />

        <item
            android:id="@+id/menu_attendance"
            android:title="@string/attendancess"
            android:icon="@drawable/fingerprintscan"
            app:itemTextColor="@color/menu_item_text_color_selector"
            />

        <item
            android:id="@+id/menu_performance"
            android:title="My Performance"
            android:icon="@drawable/improvement"
            app:itemTextColor="@color/menu_item_text_color_selector"
            />

        <item
            android:id="@+id/menu_uploadDocument"
            android:title="Update Profile"
            android:icon="@drawable/upload"
            app:itemTextColor="@color/menu_item_text_color_selector"
            />

        <item
            android:id="@+id/menu_upload_Document"
            android:title="Documentation"
            android:icon="@drawable/upload"
            app:itemTextColor="@color/menu_item_text_color_selector"
            />

        <item
            android:id="@+id/menu_getDoc"
            android:title="User Document"
            android:icon="@drawable/project"
            app:itemTextColor="@color/menu_item_text_color_selector"
            />

        <item
            android:id="@+id/menu_monthlyTask"
            android:title="Task Stats"
            android:icon="@drawable/clipboard"
            app:itemTextColor="@color/menu_item_text_color_selector"/>

        <item
            android:id="@+id/menu_change_Password"
            android:title="@string/change_passwords"
            android:icon="@drawable/lock"
            app:itemTextColor="@color/menu_item_text_color_selector"/>

        <item
            android:id="@+id/menu_feedback"
            android:title="Feedback"
            android:icon="@drawable/feedback"
            app:itemTextColor="@color/menu_item_text_color_selector"/>

        <item
            android:id="@+id/menu_message"
            android:title="Message"
            android:icon="@drawable/feedback"
            app:itemTextColor="@color/menu_item_text_color_selector"/>

        <item
            android:id="@+id/menu_logout"
            android:title="@string/logouts"
            android:icon="@drawable/exit_to_app"
            app:itemTextColor="@color/menu_item_text_color_selector"/>
    </group>

</menu>
