<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".user.fragment.LeaveRequestFragment">

    <!-- ScrollView for vertical scrolling -->
    <FrameLayout
        android:id="@+id/replaceLeave"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- LinearLayout to hold the content vertically -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <!-- CardView for leave request form -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="@dimen/_30dp"
                android:backgroundTint="@color/Card"
                app:cardCornerRadius="@dimen/_30dp"
                app:cardElevation="@dimen/_20dp">

                <!-- TextView for leave application title -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20dp"
                    android:layout_marginTop="@dimen/_10"
                    android:fontFamily="@font/poppins"
                    android:text="@string/leave_apply_for"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <!-- LinearLayout for leave type selection -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40dp"
                    android:layout_marginStart="@dimen/_20dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="@dimen/_20dp"
                    android:background="@drawable/spinner_back"
                    android:orientation="horizontal">

                    <!-- Spinner for leave type selection -->
                    <Spinner
                        android:id="@+id/spinner_leave_type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10dp"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:backgroundTint="@color/white"
                        android:spinnerMode="dialog" />
                </LinearLayout>

                <!-- TextView for leave date selection -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginEnd="155dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/leave_date"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <!-- LinearLayout for date selection -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="@dimen/_20dp"
                    android:layout_marginTop="130dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/spinner_back"
                    android:orientation="horizontal">

                    <!-- TextView for date placeholder -->
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="8dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/dd_mm_yyyy"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/white"
                        android:textSize="13sp" />

                    <!-- ImageView for calendar icon -->
                    <ImageView
                        android:id="@+id/calenderImg"
                        android:layout_width="@dimen/_40dp"
                        android:layout_height="@dimen/_20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/visit" />
                </LinearLayout>

                <!-- TextView for selected date -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20dp"
                    android:layout_marginTop="180dp"
                    android:layout_marginEnd="125dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/selected_date"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <!-- LinearLayout for selected date container -->
                <LinearLayout
                    android:id="@+id/textViewContainer"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50dp"
                    android:layout_marginStart="@dimen/_20dp"
                    android:layout_marginEnd="@dimen/_20dp"
                    android:background="@drawable/leave_request"
                    android:orientation="horizontal"
                    android:layout_marginTop="205dp">

                        <!-- TextView elements for selected dates -->
                        <TextView
                            android:id="@+id/selectedDateTextView1"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:padding="@dimen/_5dp"
                            android:layout_marginStart="@dimen/_5dp"
                            android:textColor="@color/white"
                            android:textSize="13sp" />

                </LinearLayout>

                <!-- TextView for leave reason -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="270dp"
                    android:layout_marginStart="@dimen/_20dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/reason"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <!-- EditText for entering leave reason -->
                <EditText
                    android:id="@+id/reasonEditText"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="@dimen/_20dp"
                    android:layout_marginTop="300dp"
                    android:layout_marginEnd="@dimen/_20dp"
                    android:background="@drawable/leave_request"
                    android:fontFamily="@font/poppins"
                    android:gravity="start|top"
                    android:hint="@string/enter_reason_for_leave"
                    android:textSize="13sp"
                    android:paddingStart="@dimen/_10dp"
                    android:paddingEnd="@dimen/_10dp"
                    android:paddingTop="@dimen/_10dp"
                    android:inputType="textMultiLine"
                    android:scrollHorizontally="false"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />
            </androidx.cardview.widget.CardView>

            <!-- Button for submitting leave request -->
            <Button
                android:id="@+id/saveLeave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/poppins"
                android:background="@drawable/button"
                style="@style/CustomButtonStyle"
                android:hint="@string/submit_request"
                android:textColorHint="@color/white"/>
        </LinearLayout>
    </ScrollView>
    </FrameLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
